--- a/css/banner/banner.css
+++ b/css/banner/banner.css
@@ -1,9 +1,8 @@
 body{
-    background: url(/assets/img/background.jpg) no-repeat center/ cover;
-    /* background-repeat: no-repeat;
+    background: url(/assets/img/background.jpg);
+    background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
-    background-size: cover; */
+    background-size: cover; 
     background-attachment: fixed;
-    height: 100vh;
 }
