--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,18 @@
 *{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    min-height: 100vh;
+    max-width: 100%;
+}
+
+main{
+    min-height: 100vh;
+    position: relative;
+    width: 100%;
 }
 
 
