corrijo error responsive, linkeo btn encrip y desencrip a area secundaria

--- a/css/principal/principal.css
+++ b/css/principal/principal.css
@@ -103,6 +103,7 @@
     font-size: 1rem;
     font-weight: 300;
     text-align: center;
+    padding-bottom: 10px;
 }
 
 .content-principal__area-secundaria-messagebox-textarea{
