--- a/css/footer/footer.css
+++ b/css/footer/footer.css
@@ -14,13 +14,14 @@
 }
 
 .footer__copyright-text{
-    padding: 0 5px 0 20px;
+    padding: 0 0 0 5px;
 }
 
 .footer__copyright-text-icon{
     font-size: 1.2rem;
     font-weight: 400;
     color: var(--footer-text);
+    padding-left: 20px;
 }
 
 .footer__powered{
