corrijo responsive, config banner,

--- a/css/banner/banner.css
+++ b/css/banner/banner.css
@@ -1,7 +1,5 @@
 body{
     background: url(/assets/img/background.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
+    /* background-repeat: no-repeat; */
     background-size: cover; 
 }
