corrijo responsive bg , header

--- a/css/banner/banner.css
+++ b/css/banner/banner.css
@@ -2,4 +2,5 @@ body{
     background: url(/assets/img/background.jpg);
     /* background-repeat: no-repeat; */
     background-size: cover; 
+    background-position: center;
 }
