--- a/css/responsive/responsive.css
+++ b/css/responsive/responsive.css
@@ -114,7 +114,7 @@
         height: 1200px;
     }
     .header__encryptor-title{
-        justify-content: flex-start;
+        justify-content: center;
         padding-right: 5px;
     }
     .area-principal__textarea-label{
