--- a/css/footer/footer.css
+++ b/css/footer/footer.css
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     border-top: solid 2px #75757515;
+    padding-bottom: 10px;
 }
 
 .footer__copyright{
