--- a/css/principal/principal.css
+++ b/css/principal/principal.css
@@ -6,7 +6,7 @@
 }
 
 .content-principal__area-principal{
-    padding: 20px 0;
+    padding: 50px 0 20px 0;
     background: transparent;
     display: flex;
     flex-direction: column;
@@ -90,7 +90,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    /* display: none; */
+    display: none;
     /*provisorio*/
 }
 
@@ -117,7 +117,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    display: none;
+    /* display: none; */
    
 }
 
