--- a/css/responsive/responsive.css
+++ b/css/responsive/responsive.css
@@ -42,9 +42,10 @@
     }
 
     .footer__powered{
-        padding-bottom: 10px;
+        padding: 10px 0;
     }
     .footer__copyright, .footer__socialmedia{ 
+        padding-bottom: 10px;
         justify-content: center;
     }
     .footer__copyright{
