--- a/css/principal/principal.css
+++ b/css/principal/principal.css
@@ -20,7 +20,7 @@
     width: 600px;
     height: 400px;
     font-size: 1.8rem;
-    color: var(--azul-claro);
+    color: var(--green);
     text-transform:lowercase;
     background: transparent;
     border: none;
@@ -29,7 +29,7 @@
 }
 
 .area-principal__textarea-label{
-    color: var(--main-text);
+    color: var(--gray);
     font-size: 1.2rem;
     padding: 20px 0;
 }
@@ -47,26 +47,26 @@
     margin: 10px 20px; 
     width: 260px;
     height: 50px;
-    background: rgba(0, 0, 0, 0.611);
+    background: var(--bg-oscuro-transparente);
     border-radius: 24px;
     border: none;
-    color: var(--gris);
+    color: var(--gray);
     cursor: pointer;
     font-size: 1.3rem;
     transition: 0.2s;
 }
 
 .boton-encriptar:hover, .boton-desencriptar:hover{
-    background: rgba(119, 119, 119, 0.363);
+    background: var(--bg-gray-transparente);
     color: var(--negro);
     -webkit-transform: scale(1.02);
     transform: scale(1.02);
-    border: solid 1px var(--azul-claro);
+    border: solid 1px var(--green);
     
 }
 
 .boton-encriptar:active, .boton-desencriptar:active{
-    background: linear-gradient(70deg, rgba(8, 18, 71, 0.539), rgba(22, 72, 143, 0.316),rgba(172, 26, 205, 0.219));
+    background: var(--bg-linear-gradient);
     transition: none;
 }
 
@@ -81,7 +81,7 @@
 }
 
 .content-principal__area-secundaria-messagebox{
-    background: rgba(0, 0, 0, 0.611);
+    background: var(--bg-oscuro-transparente);
     box-sizing: border-box;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     border-radius: 32px;
@@ -90,8 +90,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    display: none;
-    /*provisorio*/
 }
 
 .content-principal__area-secundaria-messagebox-img{
@@ -99,7 +97,7 @@
     height: 290px;
 }
 .content-principal__area-secundaria-messagebox-text{
-    color: var(--gris);
+    color: var(--gray);
     font-size: 1rem;
     font-weight: 300;
     text-align: center;
@@ -107,7 +105,7 @@
 }
 
 .content-principal__area-secundaria-messagebox-textarea{
-    background: rgba(0, 0, 0, 0.611);
+    background: var(--bg-oscuro-transparente);
     box-sizing: border-box;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     border-radius: 32px;
@@ -116,9 +114,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
-    /* display: none; */
-   
+    align-items: center;  
+    text-align: center;
 }
 
 .div-mensaje{
@@ -126,36 +123,37 @@
     height: 70%;
     text-align: center;
     font-size: 1.8rem;
-    color: var(--azul-claro);
+    color: var(--green);
     text-transform:lowercase;
     background: transparent;
     border: none;
     outline: none;
     resize: none;
+    padding-top: 70px;
 }
 
 .boton-copiar{
     width: 260px;
     height: 50px;
-    background: rgba(0, 0, 0, 0.611);
+    background: var(--bg-oscuro-transparente);
     border-radius: 24px;
     border: none;
-    color: var(--gris);
+    color: var(--gray);
     cursor: pointer;
     font-size: 1.3rem;
     transition: 0.2s;
 }
 
 .boton-copiar:hover{
-    background: rgba(119, 119, 119, 0.363);
+    background: var(--bg-gray-transparente);
     color: var(--negro);
     -webkit-transform: scale(1.02);
     transform: scale(1.02);
-    border: solid 1px var(--azul-claro);
+    border: solid 1px var(--green);
 }
 
 .boton-copiar:active{
-    background: linear-gradient(70deg, rgba(8, 18, 71, 0.539), rgba(22, 72, 143, 0.316),rgba(172, 26, 205, 0.219));
+    background: var(--bg-linear-gradient);
     transition: none;
 }
 
