--- a/css/footer/footer.css
+++ b/css/footer/footer.css
@@ -3,7 +3,7 @@
     height: 50px;
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     border-top: solid 2px var(--border-top-footer);
     padding-bottom: 10px;
 }
@@ -53,7 +53,7 @@
 }
 .footer__socialmedia-lista{
     list-style: none;
-    padding-right: 20px;
+    margin: 0 20px;
     display: flex;
 }
 
